The individual REQUEST and RESPONSE parsing functions no longer need to parse the Function Code, as it is now handled internally.
Also, READ_INPUT_REGISTERS, and any other "list" type response should directly return an Array instance.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "keywords": ["MODBUS", "protocol", "StreamStack"],
   "dependencies": {
     "stream-stack": ">= 1.0.1",
-    "bufferlist": "*",
+    "bufferlist": ">= 0.0.6",
     "put": "*"
   },
   "devDependencies" : {
