Added 'npm test' script.

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "put": "*"
   },
   "devDependencies" : {
-    "colors": ">= 0.3.0"
+    "colors": ">= 0.3.0",
+    "expresso": "*"
   },
   "main": "./lib/modbus-stack",
   "modules": {
     "client": "./lib/client",
     "server": "./lib/server"
   },
+  "scripts": { "test": "expresso" },
   "engines": { "node": ">= 0.3.0" }
 }
