--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "client": "./lib/client",
     "server": "./lib/server"
   },
-  "scripts": { "test": "expresso" },
+  "scripts": { "test": "expresso test/test*.js" },
   "engines": { "node": ">= 0.3.0" }
 }
