Client request/responses 1-6,15,16 are now fully implemented

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "stream-stack": ">= 1.0.1",
     "bufferlist": ">= 0.0.6",
-    "put": "*"
+    "put": "*",
+    "node-bitarray": ">= 0.0.2",
   },
   "devDependencies": {
     "colors": ">= 0.3.0",
