Fixed package.json syntax

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "stream-stack": ">= 1.0.1",
     "bufferlist": ">= 0.0.6",
     "put": "*",
-    "node-bitarray": ">= 0.0.2",
+    "node-bitarray": ">= 0.0.2"
   },
   "devDependencies": {
     "colors": ">= 0.3.0",
